deploy-localhost.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: matrix
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: matrix
    spec:
#      use the minikube built-in /data pv
#      volumes:
#      - name: neo-disk
#        hostPath:
#          path: /data
      containers:
      - name: matrix
        image: gcr.io/wiresafe-project/matrix
        ports:
          - containerPort: 8008
            name: http
#        don't mount the pv when running from minikube
#        volumeMounts:
#        - mountPath: /data
#          name: neo-disk
        readinessProbe:
          httpGet:
            path: /_matrix/client/
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          failureThreshold: 10
