deploy.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: matrix
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: matrix
    spec:
      volumes:
      - name: neo-disk
        gcePersistentDisk:
          pdName: neo-disk
          fsType: ext4
      containers:
      - name: matrix
        image: silviof/docker-matrix
        ports:
        - containerPort: 8008
          name: http
        volumeMounts:
        - mountPath: /data
          name: neo-disk
        readinessProbe:
          httpGet:
            path: /_matrix/client/
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          failureThreshold: 10
